<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Familization">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.346">

        <TextView
            android:id="@+id/frtextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/fr"
            app:layout_constraintEnd_toStartOf="@+id/amptextView"
            app:layout_constraintStart_toEndOf="@+id/nptextView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/amptextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/amp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/frtextView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nptextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/np"
            app:layout_constraintBottom_toTopOf="@+id/npRadioGroup"
            app:layout_constraintEnd_toStartOf="@+id/frtextView"
            app:layout_constraintStart_toEndOf="@+id/prtextView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/prtextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/pr"
            app:layout_constraintEnd_toStartOf="@+id/nptextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/famil_prRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/npRadioGroup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/prtextView">

            <RadioButton
                android:id="@+id/famil_prFast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fast" />

            <RadioButton
                android:id="@+id/famil_prModerate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/moderate" />

            <RadioButton
                android:id="@+id/famil_prSlow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/slow" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/famil_frRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/famil_ampRadioGroup"
            app:layout_constraintStart_toEndOf="@+id/famil_npRadioGroup"
            app:layout_constraintTop_toBottomOf="@id/frtextView">

            <RadioButton
                android:id="@+id/famil_frHigh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/high" />

            <RadioButton
                android:id="@+id/famil_frMid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/mid" />

            <RadioButton
                android:id="@+id/famil_frLow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/low" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/famil_ampRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/famil_frRadioGroup"
            app:layout_constraintTop_toBottomOf="@id/amptextView">

            <RadioButton
                android:id="@+id/famil_ampStrong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/strong" />

            <RadioButton
                android:id="@+id/famil_ampWeak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weak" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/famil_npRadioGroup"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/famil_frRadioGroup"
            app:layout_constraintStart_toEndOf="@+id/famil_prRadioGroup"
            app:layout_constraintTop_toBottomOf="@+id/nptextView">

            <RadioButton
                android:id="@+id/famil_np7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="7" />

            <RadioButton
                android:id="@+id/famil_np5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="5" />

            <RadioButton
                android:id="@+id/famil_np3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="3" />

            <RadioButton
                android:id="@+id/famil_np2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2" />

            <RadioButton
                android:id="@+id/famil_np1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/famil_txtIDView"
        android:layout_width="100dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/doneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:text="Done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <ToggleButton
        android:id="@+id/famil_random_hide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:textOff="Pick Random and Hide"
        android:textOn="Show Parameters"
        app:layout_constraintBottom_toTopOf="@+id/famil_txtIDView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>